fixed word wrap for pre tags in Firefox

--- a/public/stylesheets/modules/_github.sass
+++ b/public/stylesheets/modules/_github.sass
@@ -4,6 +4,7 @@
 #main-generic
   pre
     margin-bottom: 10px
+    white-space: pre-wrap
     word-wrap: break-word
     span
       font-size: 13px
